# social-vision-agent

./: .env.example  .gitignore  README.md  a.txt  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_weekly.py  scheduler.py  test_main.http
config/: __init__.py  platforms.yaml  settings.py  weekly_brief.yaml
docker/: Dockerfile  docker-compose.yml
knowledge/: products.yaml  vision.md
skills/public/engagement-booster/: SKILL.md
skills/public/hashtag-strategy/: SKILL.md
skills/public/social-media-writing/: SKILL.md
skills/public/thread-writer/: SKILL.md
skills/public/trend-researcher/: SKILL.md
skills/public/viral-hooks/: SKILL.md
skills/public/visual-branding/: SKILL.md
src/: state.py
src/agents/: optimizer.py  product_expert.py  publisher.py  strategist.py  visual.py  writer.py
src/db/: postgres.py
src/graph/: nodes.py  weekly_content_graph.py
src/skills/: loader.py  tool.py
src/tools/: grok_imagine.py  platform_rules.py  product_knowledge.py  web_search.py  weekly_brief.py
src/utils/: json_parser.py  llm_factory.py  logger.py
tests/: conftest.py
tests/integration/: test_graph.py
tests/unit/: test_agents.py  test_json_parser.py  test_skills.py  test_state.py  test_tools.py
